--- a/CITIZEN-API.yml
+++ b/CITIZEN-API.yml
@@ -1,7 +1,12 @@
 
 app:
  message:
-    successmessage: "Login successful!"
-    failuremessage: "Invalid credentials. Please try again."
+    successMessage: "Login successful!"
+    failureMessage: "Invalid credentials. Please try again."
     mailSubject   : "HIS-Forget-Password"
     dashboardGreet: "Welcome to Dashboard "
+    unAuth        : "Unauthorized access";
+    interanlServerError : "Internal Server Error"
+    registerSuccess : "Citizen is Register Successfully."
+    exstingCitizen  : "Citizen is Already with Register "
+    mailSent       : "Mail Sent Successfully to "   
