--- a/CITIZEN-API.yml
+++ b/CITIZEN-API.yml
@@ -1,4 +1,32 @@
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/HIS
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: java
+  jpa:
+    hibernate: 
+      ddl-auto: update
+    show-sql: true   
+    properties:
+       hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect    
+  
+  boot:
+    admin:
+      client:
+        url: http://localhost:1010
+  
+  
+        
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'        
+
+
 app:
  message:
     successMessage: "Login successful!"
