--- a/AR-API.yml
+++ b/AR-API.yml
@@ -12,4 +12,7 @@ management:
 
 app:
   message:
-    ssnwebapi: "http://localhost:1234/citizen-details"
+    ssnwebapi      :  "http://localhost:1234/citizen-details"
+    successmessage :  "Citizen is Successfully Register";
+    failedmessage  :  "Citizen Not Belong to Rhode Island"
+ 
