--- a/AR-API.yml
+++ b/AR-API.yml
@@ -13,6 +13,6 @@ management:
 app:
   message:
     ssnwebapi: "http://13.233.152.39:1234/citizen-details"
-    successmessage :  "Citizen is Successfully Register"
-    failedmessage  :  "Citizen Not Belong to Rhode Island"
+    successmessage:  "Citizen is Successfully Register"
+    failedmessage:  "Citizen Not Belong to Rhode Island, Application Registration Failed"
  
