--- a/AR-API.yml
+++ b/AR-API.yml
@@ -11,7 +11,7 @@ management:
         include: '*'
 
 app:
-  message:
+  messages:
     ssnwebapi: "http://13.233.152.39:1234/citizen-details"
     successmessage:  "Citizen is Successfully Register"
     failedmessage:  "Citizen Not Belong to Rhode Island, Application Registration Failed"
