--- a/AR-API.yml
+++ b/AR-API.yml
@@ -25,7 +25,7 @@ management:
 
 app:
   messages:
-    ssnwebapi: "http://13.233.152.39:1234/citizen-details"
+    ssnwebapi: "http://localhost:1234/citizen-details"
     successmessage:  "Citizen is Successfully Register"
     failedmessage:  "Citizen Not Belong to Rhode Island, Application Registration Failed"
  
